# fun-with-dspy

./: 01_basic.ipynb  02_fewshots.ipynb  03_instruction_tuning.ipynb  04_signature_cot.ipynb  05_image_as_input.ipynb  06_other_models.ipynb  07_tool_calling.ipynb  08_custom_signature.ipynb  README.md  basic.ipynb  debug_prompts.py  dev.ipynb  emotion_classifier.json  emotion_classifier_optimized.json  emotion_driver_optimized.json  emotion_hf_optimized.json  find_cache.py  pyproject.toml  test.ipynb  test_comparison.py  test_final_comparison.py  test_gepa.py  test_gepa_comparison.py  test_gepa_huggingface.py  test_huggingface.py  test_identical.py  test_lm_parity.py  test_optimized_models.py  test_reflection_debug.py  test_score_comparison.py
artifacts/: fewshots_emotion_custom_classifier.json  instruction_emotion_custom_classifier.json
documents/: adapter.md  cache.md  demos-system-vs-messages.md  driverlm.md  how_to_create_demos.md  message-flow.md  model_size_effect.md  optimization.md  signature_cot.md  signature_study.md  tips.md  work_with_image.md
package/: base.py
